--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,8 +10,7 @@
     <ImageView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/profilepic"
-        android:id="@+id/imageView"
+        android:id="@+id/profilePictureImageView"
         android:layout_alignEnd="@+id/textView8"
         android:layout_toEndOf="@+id/textView10"
         android:layout_alignStart="@+id/textView8" />
@@ -22,7 +21,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Radhika Aggarwal"
         android:id="@+id/textView7"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/profilePictureImageView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp" />
 
@@ -90,5 +89,11 @@
         android:id="@+id/searchEventButton"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calendar"
+        android:id="@+id/calendarButton"
+        android:layout_above="@+id/searchEventButton"/>
 
 </RelativeLayout>
