--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,6 +39,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp" />
 
+    <ToggleButton
+        android:id="@+id/offlineToggle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ToggleButton" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
