--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -14,6 +14,12 @@
             tools:context="com.jsphdev.balance.RegistrationPage"
             android:orientation="vertical">
 
+            <ToggleButton
+                android:id="@+id/offlineToggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ToggleButton" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
