--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -13,7 +13,7 @@
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:map="http://schemas.android.com/apk/res-auto"
-            android:layout_width="400dp"
+            android:layout_width="match_parent"
             android:layout_height="300dp"
             android:id="@+id/map"
             tools:context="student.CreateEvent"
@@ -28,12 +28,21 @@
             android:layout_below="@+id/map">
         </EditText>
 
+        <EditText
+            android:id="@+id/LocationName"
+            android:layout_height="wrap_content"
+            android:hint="Location Name"
+            android:inputType="text"
+            android:layout_width="fill_parent"
+            android:layout_below="@+id/EditEventName">
+        </EditText>
+
         <Button
             android:id="@+id/ButtonChooseStartTime"
             android:layout_height="wrap_content"
             android:text="Choose Start Time"
             android:layout_width="fill_parent"
-            android:layout_below="@+id/EditEventName">
+            android:layout_below="@+id/LocationName">
         </Button>
 
         <TextView
@@ -93,22 +102,12 @@
             android:text="Stop Date Selected"
             />
 
-
-        <EditText
-            android:id="@+id/EditEventLocation"
-            android:layout_height="wrap_content"
-            android:hint="Event Location"
-            android:inputType="text"
-            android:layout_width="fill_parent"
-            android:layout_below="@+id/TextViewStopDate">
-        </EditText>
-
         <Button
             android:id="@+id/ButtonSendFeedback"
             android:layout_height="wrap_content"
             android:text="Create Event"
             android:layout_width="fill_parent"
-            android:layout_below="@+id/EditEventLocation">
+            android:layout_below="@+id/TextViewStopDate">
         </Button>
 
     </RelativeLayout>
