--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,66 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
+    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.jsphdev.balance.SearchEvent">
+    tools:context="com.jsphdev.balance.SearchEvent"
+    android:orientation="vertical">
+
+    <com.jsphdev.maps.CustomAutoCompleteTextView
+        android:id="@+id/atv_places"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:hint="@string/str_atv_places" />
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:map="http://schemas.android.com/apk/res-auto"
-        android:layout_width="400dp"
-        android:layout_height="300dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/map"
-        tools:context="student.CreateEvent"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
+        tools:context="student.SearchEvent"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_below="@+id/atv_places"
+        android:layout_weight="80"
+        />
 
-    <EditText
-        android:id="@+id/SearchEventByName"
-        android:layout_height="wrap_content"
-        android:hint="Search event by Name"
-        android:inputType="text"
-        android:layout_width="fill_parent"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/map">
+    <!--<EditText-->
+        <!--android:id="@+id/SearchEventByName"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="Search event by Name"-->
+        <!--android:inputType="text"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:layout_below="@+id/map">-->
 
-    </EditText>
+    <!--</EditText>-->
 
-    <EditText
-        android:id="@+id/SearchEventByTime"
-        android:layout_height="wrap_content"
-        android:layout_width="fill_parent"
-        android:hint="Search event by Time"
-        android:inputType="datetime"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/SearchEventByName">
-    </EditText>
+    <!--<EditText-->
+        <!--android:id="@+id/SearchEventByTime"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:hint="Search event by Time"-->
+        <!--android:inputType="datetime"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:layout_below="@+id/SearchEventByName">-->
+    <!--</EditText>-->
 
-    <EditText
-        android:id="@+id/SearchEventByLocation"
-        android:layout_height="wrap_content"
-        android:hint="Search event by Location"
-        android:inputType="text"
-        android:layout_width="fill_parent"
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/SearchEventByTime">
-    </EditText>
+    <!--<EditText-->
+        <!--android:id="@+id/SearchEventByLocation"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:hint="Search event by Location"-->
+        <!--android:inputType="text"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_marginTop="5dp"-->
+        <!--android:layout_below="@+id/SearchEventByTime">-->
+    <!--</EditText>-->
 
-    <Button
-        android:id="@+id/ButtonSearchRequest"
-        android:layout_height="wrap_content"
-        android:text="Search Event"
-        android:layout_width="fill_parent"
-        android:layout_below="@+id/SearchEventByLocation"
-        android:layout_marginTop="5dp">
-    </Button>
+    <!--<Button-->
+        <!--android:id="@+id/ButtonSearchRequest"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Search Event"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_below="@+id/SearchEventByLocation"-->
+        <!--android:layout_marginTop="5dp">-->
+    <!--</Button>-->
 
 
-</RelativeLayout>
-
-</ScrollView>
+</LinearLayout>
 
